// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSumary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Viewing <span>1</span> expense totalling <span>$56.40</span>",
        }
      }
    />
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseSumary with 2 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Viewing <span>2</span> expenses totalling <span>$78.95</span>",
        }
      }
    />
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
